Restrict branches for commit message validation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: 🔍 Validate Commit Messages
 
 on:
   push:
-    branches: [*]
+    branches: [ main, develop, feature/* ]
   pull_request:
     types: [opened, synchronize, edited, reopened]
 
